# BigBrother

./: README.md
.github/workflows/: c-cpp - Windows.yml  c-cpp.yml
BigBrother/: CMakeLists.txt  analyzer.cpp  analyzer.h  lindeviceswidges.cpp  lindeviceswidges.h  lindeviceswidges.ui  linuxdevicesmanager.cpp  linuxdevicesmanager.h  linuxnetworkdevice.cpp  linuxnetworkdevice.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkdevice.cpp  networkdevice.h  networkdevicemanager.cpp  networkdevicemanager.h  networklistener.cpp  networklistener.h  networklistenerfactory.h  networklistenerlin.cpp  networklistenerlin.h  networklistenerwin.cpp  networklistenerwin.h  packettable.cpp  packettable.h
BigBrother/src/: CMakeLists.txt  IPv4Header.h  printerchooserwidget.cpp  printerchooserwidget.h  printerchooserwidget.ui
BigBrother/src/Common/: StringUtiles.h  ViewSettings.h  analyzer.cpp  analyzer.h  littleendianparser.h  main.cpp  outputmanager.cpp  outputmanager.h  packethandler.cpp  packethandler.h  packetsstorage.cpp  packetsstorage.h  packettable.cpp  packettable.h  settings.cpp  utiles.h
BigBrother/src/GUI/: lindeviceswidges.cpp  lindeviceswidges.h  lindeviceswidges.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  memoryusagedialog.cpp  memoryusagedialog.h  memoryusagedialog.ui  packetviewer.cpp  packetviewer.h  packetviewer.ui  terminal.cpp  terminal.h  terminal.ui  viewsettingsdialog.cpp  viewsettingsdialog.h  viewsettingsdialog.ui
BigBrother/src/Linux/: linuxdevicesmanager.cpp  linuxdevicesmanager.h  networklistenerlin.cpp  networklistenerlin.h
BigBrother/src/Net/: AbstractPacket.h  EthernetHeader.h  EthernetIIHeader.h  IPv4Header.h  IPv6Header.h  ProtocolHeader.h  TCPHeader.h  TransportHeader.h  UDPHeader.h  networkdevicefactory.cpp  networklistener.h  networklistenerfactory.h
